<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_time_calculator">

    <fragment
        android:id="@+id/navigation_time_calculator"
        android:name="io.github.sirpryderi.astrophotographycalculator.view.fragment.TimeCalculatorFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_time_calculator" />

    <fragment
        android:id="@+id/navigation_ev_calculator"
        android:name="io.github.sirpryderi.astrophotographycalculator.view.fragment.EVCalculatorFragment"
        android:label="@string/title_ev_calculator"
        tools:layout="@layout/fragment_ev_calculator" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="io.github.sirpryderi.astrophotographycalculator.view.fragment.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_help"
        android:name="io.github.sirpryderi.astrophotographycalculator.view.fragment.HelpFragment"
        android:label="@string/title_help"
        tools:layout="@layout/fragment_help" />
</navigation>